docs/i18n/ko/docusaurus-plugin-content-docs/version-4.0.0-beta.3/api/Panel.mdx
import Translate, {translate} from '@docusaurus/Translate';



```ts
class Panel
```
슬라이드 데이터 컴포넌트로, 단일 HTMLElement의 정보를 갖고 있습니다

<div className="container">
    <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
    <div className="row"><div className="col col--6"><a href="#element">element</a><br/><a href="#index">index</a><br/><a href="#position">position</a><br/><a href="#size">size</a><br/><a href="#sizeIncludingMargin">sizeIncludingMargin</a><br/><a href="#height">height</a><br/><a href="#margin">margin</a><br/><a href="#alignPosition">alignPosition</a><br/><a href="#offset">offset</a><br/><a href="#removed">removed</a><br/><a href="#range">range</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#resize">resize</a><br/><a href="#contains">contains</a><br/><a href="#destroy">destroy</a><br/><a href="#includePosition">includePosition</a><br/><a href="#includeRange">includeRange</a><br/><a href="#focus">focus</a><br/><a href="#prev">prev</a><br/><a href="#next">next</a><br/><a href="#increaseIndex">increaseIndex</a><br/><a href="#decreaseIndex">decreaseIndex</a><br/><a href="#increasePosition">increasePosition</a><br/><a href="#decreasePosition">decreasePosition</a><br/><a href="#increaseOffset">increaseOffset</a><br/><a href="#decreaseOffset">decreaseOffset</a><br/><a href="#resetOffset">resetOffset</a></div></div>
  </div>

## Constructor
```ts
new Panel(options, options.el, options.index, options.align, options.flicking)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|no||옵션 오브젝트|
|options.el|HTMLElement|yes||패널이 참조하는 `HTMLElement`|
|options.index|number|yes||패널의 초기 인덱스|
|options.align|[Constants.ALIGN](Constants:ALIGN) \| string \| number|yes||패널의 초기 [align](Flicking#align)값|
|options.flicking|[Flicking](Flicking)|yes||패널이 참조하는 [Flicking](Flicking) 인스턴스|


## Properties

### element {#element}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널이 참조하고 있는 `HTMLElement`

**Type**: HTMLElement
















### index {#index}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널의 인덱스

**Type**: number
















### position {#position}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널의 현재 좌표, [alignPosition](Panel#alignPosition)을 포함하고 있습니다

**Type**: number
















### size {#size}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널 엘리먼트의 캐시된 크기
이 값은 [horizontal](Flicking#horizontal)이 `true`일 경우 [element](Panel#element)의 `offsetWidth`와 동일하고, `false`일 경우 `offsetHeight`와 동일합니다

**Type**: number
















### sizeIncludingMargin {#sizeIncludingMargin}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

CSS `margin`을 포함한 패널의 크기
이 값은 [horizontal](Flicking#horizontal)이 `true`일 경우 margin left/right을 포함하고, `false`일 경우 margin top/bottom을 포함합니다

**Type**: number
















### height {#height}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널 엘리먼트의 높이

**Type**: number
















### margin {#margin}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널 엘리먼트의 CSS `margin` 값

**Type**: object








|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|prev|number|[horizontal](Flicking#horizontal)이 `true`일 경우 `margin-left`, `false`일 경우 `margin-top`에 해당하는 값|
|next|number|[horizontal](Flicking#horizontal)이 `true`일 경우 `margin-right`, `false`일 경우 `margin-bottom`에 해당하는 값|







### alignPosition {#alignPosition}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널의 정렬 기준 위치. [Camera](Camera)의 뷰포트 내에서의 [alignPosition](Camera#alignPosition)이 위치해야 하는 곳입니다

**Type**: number
















### offset {#offset}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

현재 패널의 위치 오프셋 값. [circular](Flicking#circular) 모드에서 패널의 엘리먼트의 순서가 변경될 때 이 값이 변경됩니다

**Type**: number

**Default**: 0














### removed {#removed}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널이 [remove](Flicking#remove)되었는지 여부를 나타내는 값

**Type**: boolean
















### range {#range}

<div className="bulma-tags">

<span className="bulma-tag is-warning">readonly</span>


</div>

패널 엘리먼트의 Bounding box 범위

**Type**: object








|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|min|number|Bounding box's left([horizontal](Flicking#horizontal): true) / top([horizontal](Flicking#horizontal): false)|
|max|number|Bounding box's right([horizontal](Flicking#horizontal): true) / bottom([horizontal](Flicking#horizontal): false)|







### align {#align}

<div className="bulma-tags">




</div>

[alignPosition](Panel#alignPosition)이 패널 내의 어디에 위치해야 하는지를 나타내는 값

**Type**: [Constants.ALIGN](Constants:ALIGN) \| string \| number
















## Methods

### resize {#resize}

<div className="bulma-tags">




</div>

패널의 크기를 갱신합니다





**Returns**: this













### contains {#contains}

<div className="bulma-tags">




</div>

해당 엘리먼트가 이 패널의 [element](Panel#element) 내에 포함되어 있는지를 반환합니다





**Returns**: boolean
- 패널의 [element](Panel#element)내에 해당 엘리먼트 포함 여부



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|element|HTMLElement|no||확인하고자 하는 HTMLElement|








### destroy {#destroy}

<div className="bulma-tags">




</div>

내부 상태를 초기화하고 [removed](Panel#removed)를 `true`로 설정합니다.





**Returns**: void













### includePosition {#includePosition}

<div className="bulma-tags">




</div>

주어진 좌표가 현재 패널의 [range](Panel#range)내에 속해있는지를 반환합니다.





**Returns**: boolean
- 해당 좌표가 패널 영역 내에 속해있는지 여부



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|pos|number|no||확인하고자 하는 좌표|
|includeMargin|boolean|yes|false|패널 영역에 [margin](Panel#margin)값을 포함시킵니다|








### includeRange {#includeRange}

<div className="bulma-tags">




</div>

주어진 범위가 이 패널 내부에 완전히 포함되는지를 반환합니다





**Returns**: boolean
- 해당 범위가 패널 영역 내에 완전히 속해있는지 여부



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|min|number|no||확인하고자 하는 최소 범위|
|max|number|no||확인하고자 하는 최대 범위|
|includeMargin|boolean|yes|false|패널 영역에 [margin](Panel#margin)값을 포함시킵니다|








### focus {#focus}

<div className="bulma-tags">




</div>

[Camera](Camera)를 이 패널로 이동합니다





**Returns**: Promise&lt;void&gt;
- 패널 도달시에 resolve되는 Promise



|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|duration|number|yes||애니메이션 진행 시간 (단위: ms)|








### prev {#prev}

<div className="bulma-tags">




</div>

이전(`index - 1`) 패널을 반환합니다. 이전 패널이 없을 경우 `null`을 반환합니다
[circular](Flicking#circularEnabled) 모드가 활성화되었을 때 첫번째 패널에서 이 메소드를 호출할 경우 마지막 패널을 반환합니다





**Returns**: [Panel](Panel) \| null
- 이전 패널












### next {#next}

<div className="bulma-tags">




</div>

다음(`index + 1`) 패널을 반환합니다. 다음 패널이 없을 경우 `null`을 반환합니다
[circular](Flicking#circularEnabled) 모드가 활성화되었을 때 마지막 패널에서 이 메소드를 호출할 경우 첫번째 패널을 반환합니다





**Returns**: [Panel](Panel) \| null
- 다음 패널












### increaseIndex {#increaseIndex}

<div className="bulma-tags">




</div>

패널의 인덱스를 주어진 값만큼 증가시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### decreaseIndex {#decreaseIndex}

<div className="bulma-tags">




</div>

패널의 인덱스를 주어진 값만큼 감소시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### increasePosition {#increasePosition}

<div className="bulma-tags">




</div>

패널의 위치를 주어진 값만큼 증가시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### decreasePosition {#decreasePosition}

<div className="bulma-tags">




</div>

패널의위치를 주어진 값만큼 감소시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### increaseOffset {#increaseOffset}

<div className="bulma-tags">




</div>

패널의 오프셋을 주어진 값만큼 증가시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### decreaseOffset {#decreaseOffset}

<div className="bulma-tags">




</div>

패널의 오프셋을 주어진 값만큼 감소시킵니다





**Returns**: this




|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|val|number|no||0보다 같거나 큰 정수|






<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### resetOffset {#resetOffset}

<div className="bulma-tags">




</div>

패널의 오프셋을 0으로 초기화합니다





**Returns**: this











<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>


